--- a/_posts/2023-06-04-Module01.md
+++ b/_posts/2023-06-04-Module01.md
@@ -7,32 +7,34 @@ layout: post
 cover: \assets\surf2.svg
 ---
 
-Let's get acquainted with databases and understand their advantages for working with data compared to Excel/Google Sheets.
+The first module of the introduction to data engineering consists of 9 videos. During this module, we will get acquainted with the subject of study and learn about key roles in data and what they do, as well as the other names they go by.
 
-We'll practice SQL, set up a database, and load data into it. Then we'll use Excel/Google Sheets to visualize the data.
+Most importantly, we will understand how they help businesses become more efficient and earn money. We will delve into typical architectures of analytical solutions and begin with the most basic exercise: analyzing sales data in a spreadsheet.
 
-```yaml
-toc:
-    enabled: true
-```
 
-Module 2.1 Introduction
+Module 1.1 Introduction
 -------------
 
-long contents .....
+This module is aimed at acquiring a theoretical knowledge base for further work with the course, as well as understanding the role of analytics and data engineer in an organization. Before learning to work with the tools, it is very important to understand the business operations principle, how the business uses data, and how they can be beneficial. Typical architectural solutions and job vacancies for the data engineer role will be discussed.
 
-1. a
-2. b
-3. c
-4. d
+Link to video To Be Added (TBA)
 
-Module 2.2 Getting started with databases
+Module 1.2 The Role of Analytics in an Organization
 -------------
 
-long contents .....
+An organization exists to bring some value (value). There are 3 key groups to whom a particular business might be beneficial:
 
-+ 1
-+ 2
-+ 3
-+ 4
+1. Business owners (shareholders);
+2. Employees (employees);
+3. Customers (customers).
+
+![Link to diagram](https://surfalytics.com)
+
+The most important group is the customers, as many modern companies operate on the principle of "customer obsession".
+
+For a business to grow, it needs to create more value for each of these groups. For customers, for instance, this means enhancing the customer experience. For employees, it involves achieving a balance between work and life and providing a competitive salary (work-life balance, salary). For the owners, it means generating income. 
+
+For successful business growth and for these groups to perform their roles, decision-making is crucial. To make decisions, data is needed. Data can be in its raw form (raw data) or can be in the form of organized information (organized raw data). One of the tasks of a analyst or engineer is to provide data to the groups described above for further decision-making. Therefore, it's very important to understand how exactly the work done by a different kind of data roles impact what happens with the business.
+
+
 
