--- a/_posts/2023-06-04-Module01.md
+++ b/_posts/2023-06-04-Module01.md
@@ -36,5 +36,78 @@ For a business to grow, it needs to create more value for each of these groups. 
 
 For successful business growth and for these groups to perform their roles, decision-making is crucial. To make decisions, data is needed. Data can be in its raw form (raw data) or can be in the form of organized information (organized raw data). One of the tasks of a analyst or engineer is to provide data to the groups described above for further decision-making. Therefore, it's very important to understand how exactly the work done by a different kind of data roles impact what happens with the business.
 
+Module 1.3 Analytics Tasks
+-------------
+
+Analytics is a part of the business that uses data to obtain information based on which decisions are made for effective business operations. Analytics is necessary for:
+
+- Increasing profit. If the analytical solution helps to make money, then everything is good. If not, there's a problem somewhere.
+- Reducing costs. Monitoring expenses helps save money.
+- Exploring new markets or products.
+- Compliance with requirements.
+- Risk avoidance.
+
+Link to video To Be Added (TBA)
+
+Module 1.4 Key Roles in Analytics
+-------------
+
+There are many roles in data. Let's try to group them together:
+
+Traditional roles:
+- BI Developer - works with reports, dashboards, implementing BI solutions (Tableau, Power BI, SAP). Often includes providing business recommendations (business insights).
+- ETL/ELT developer - works with data integration ("techies").
+- Report Developer - same as BI Engineer
+- Data mining specialist - 
+- Data Analyst - BI developer with focus on data analysis and data exploration (deep dives in data and business problem)
+- DW Developer/Architect - works with the solution and its architecture (how it looks and functions).
+- Data Modeler - engages with business processes of the organization and creates a data model for the future data warehouse.
+
+Data Engineering roles:
+
+- Data Engineer (classical understanding of a data engineer).
+- Big Data Engineer - works with solutions related to non-relational databases.
+- Cloud DE. Works with cloud-based solutions.
+Data Platform Engineer. Works with data warehouse and data lake related solutions.
+Specialized category (Data Science, IT):
 
 
+Software Development Engineer. Strong knowledge of algorithms, data structures. Sometimes involves work with Big Data.
+Machine Learning Engineer. Proficient in mathematics, programming, and libraries/frameworks for deep learning.
+Visual Engineer. Works with data visualization using programming languages.
+Applied Scientist.
+Research Scientist.
+Advanced analytics category (Forecasting elements):
+
+Data Science roles:
+- Data mining - 
+Data Science. Strong knowledge of mathematics, statistics, programming.
+Data Analyst = Data Science.
+The course almost entirely covers the traditional category and the data engineer category.
+
+Module 1.5 Analytics and data engineering MindMap 
+-------------
+
+For roles like data engineers, BI engineers, and data analysts, a comprehensive MindMap would also cover aspects related to their specific responsibilities, tools, and areas of focus. Here are some potential additions to your 
+
+Let's put together the key terms in data:
+
+- Data Modeling: Understanding and designing the structure in which data will be stored and accessed.
+- Data Cleaning and Quality: Ensuring that data is accurate, reliable, and usable.
+Visualization Tools: Tools like Tableau, Power BI, Looker, etc., which are crucial for BI engineers and data analysts.
+- Data Governance: Establishing rules, policies, and standards for data usage and quality.
+- Reporting: Creating regular reports for business users that provide insights from data.
+Machine Learning: While traditionally the realm of data scientists, many data engineers are now required to deploy and sometimes even develop ML models.
+- Data Pipelines: Automation processes that move and transform data from one system to another.
+Performance Tuning: Ensuring that queries run efficiently and databases operate at optimal speeds.
+APIs and Integrations: Especially for data engineers who might work on integrating various data sources.
+- Data Security and Compliance: Ensuring that data is secure and that data handling practices comply with regulations like GDPR or CCPA.
+- Collaboration Tools: Platforms like GitHub, Jira, or others that professionals use to collaborate on projects.
+- Statistical Analysis: Particularly for data analysts, understanding and applying statistical methods to extract insights.
+- Data Strategy: Understanding the broader strategy for how data will be used within an organization.
+
+For each of the roles:
+
+- Data Engineer: Focus on building, maintaining, and optimizing the flow of data from diverse sources.
+- BI Engineer: Concentrate on designing and implementing the systems and tools that allow end-users to analyze the data.
+- Data Analyst: Aim at processing, analyzing the data to extract insights, and often visualizing or presenting data in a form that's accessible to business stakeholders.
