--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -7,32 +7,21 @@ layout: post
 cover: \assets\surf2.svg
 ---
 
-Let's get acquainted with databases and understand their advantages for working with data compared to Excel/Google Sheets.
+Let's get acquainted with databases, and understand their advantage for working with data compared to Excel/Google Sheets.
 
-We'll practice SQL, set up a database, and load data into it. Then we'll use Excel/Google Sheets to visualize the data.
+We'll practice SQL, set up a database and upload data into it, then we'll use Excel/Google Sheets for data visualization.
 
-```yaml
-toc:
-    enabled: true
-```
-
-Module 2.1 Introdution
+Module 2.1 Introduction
 -------------
 
-long contents .....
+After the first module, we figured out what analytics is, how it works, how it helps business be more successful, and what important skills are necessary for specialists who work with data.
 
-1. a
-2. b
-3. c
-4. d
+Although the course is called "Introduction to Data Engineering", we have touched on different areas and tools. In the subsequent modules, we will directly study how these tools work and everything we will do will intersect with the first module.
 
-Module 2.2 Getting started with databases
--------------
+For example, when we use a database, we will think about how the database can help make business decisions more efficiently.
 
-long contents .....
+The second module is dedicated to databases and SQL. Databases are foundational for any analytics. Databases are used in all organizations to gather data into structured forms.
 
-+ 1
-+ 2
-+ 3
-+ 4
+Next, we will learn how to upload and retrieve data in a database, using the SQL language.
 
+Link to video To Be Added (TBA)
