--- a/_posts/2023-06-04-Module03.md
+++ b/_posts/2023-06-04-Module03.md
@@ -6,3 +6,11 @@ category: surfalytics
 layout: post
 cover: \assets\surf2.svg
 ---
+
+In the 3rd module of our course, you will learn about Business Intelligence systems. We will look at real-life examples, popular BI tools - Tableau, Power BI, and others. We will learn to create reports and discuss best practices for data visualization and its application for the benefit of business.
+
+Module 3.1 Introduction
+-------------
+
+Link to video To Be Added (TBA)
+
