--- a/_posts/2023-06-04-Module04.md
+++ b/_posts/2023-06-04-Module04.md
@@ -6,3 +6,10 @@ category: surfalytics
 layout: post
 cover: \assets\surf2.svg
 ---
+
+In the 4th module of our course, you will learn about data integration and transformation - ETL and ELT. This is a key element in an analytical solution, with which we fill the data warehouse with data and automate data loading and transformation. We will look at examples of popular on-premise batch solutions. You will learn what the difference is between ETL and ELT, why such solutions are needed, what batch and on-premise mean, how ETL/ELT can be used to create data models, for example, dimensional modeling, we will consider the ETL/ELT market. We will practice with the classic open-source ETL solution Pentaho DI and review the desktop tool from Tableau - Tableau Prep.
+
+Module 4.1 Introduction
+-------------
+
+Link to video To Be Added (TBA)
