Changed the descriptions Module 1, 2. Added information to Intro and Module 0.

--- a/_posts/2023-06-04-Module01.md
+++ b/_posts/2023-06-04-Module01.md
@@ -9,6 +9,8 @@ cover: \assets\surf2.svg
 
 The first module of the course "Getting Started with Analytics and Data Engineering" consists of 14 videos. During this module, we will get acquainted with the subject of study and learn about key roles in data and what they do, as well as the other names they go by.
 
+Book recomendation for the module: [Lean Analytics by Alistair Croll & Benjamin Yoskovitz](https://www.amazon.com/Lean-Analytics-Better-Startup-Faster/dp/1449335675)
+
 Module 1.0 Introduction
 -------------
 
