--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -1,7 +1,7 @@
 ---
-title: Module 02 - Gettign started with databases and SQL?
+title: Module 02 - Gettign started with databases and SQL
 author: Dmitry Anoshin 
-date: 2023-06-04
+date: 2023-09-12
 category: surfalytics
 layout: post
 cover: \assets\surf2.svg
@@ -9,18 +9,23 @@ cover: \assets\surf2.svg
 
 Let's get acquainted with databases, and understand their advantage for working with data compared to Excel/Google Sheets.
 
-We'll practice SQL, set up a database and upload data into it, then we'll use Excel/Google Sheets for data visualization.
-
-Module 2.1 Introduction
+Module 2.0 Introduction
 -------------
 
-After the first module, we figured out what analytics is, how it works, how it helps business be more successful, and what important skills are necessary for specialists who work with data.
+The second module of the course will focus on databases. The module aims to provide students with a solid understanding of databases, including the different types that exist. The primary focus will be on gaining hands-on experience with databases and mastering Structured Query Language (SQL). The module will cover various topics, such as key query patterns, keywords, and SQL exercises. Students will have the opportunity to practice SQL through real-world exercises and learn how to think about SQL queries without external assistance. The module will also explore different databases like SQL Server, PostgreSQL, and MySQL, both on-premises and in Docker containers. Additionally, students will deploy a database in the cloud and create a small BI solution using a free BI tool to access the cloud database, write SQL queries, and create dashboards. The module emphasizes understanding the full end-to-end process of working with databases, from creation to data insertion and querying, providing students with a competitive advantage in interviews and their future work. 
 
-Although the course is called "Introduction to Data Engineering", we have touched on different areas and tools. In the subsequent modules, we will directly study how these tools work and everything we will do will intersect with the first module.
+Video lesson - [Module 2.0 - Introduction](https://youtu.be/GxLpe97h0tY)
 
-For example, when we use a database, we will think about how the database can help make business decisions more efficiently.
+Module 2.1 What is Database?
+-------------
 
-The second module is dedicated to databases and SQL. Databases are foundational for any analytics. Databases are used in all organizations to gather data into structured forms.
+The first lesson in Module Two of the course is an introduction to databases. The lesson begins by defining what a database is and the different types of databases that exist, including relational, analytical, and NoSQL databases. The lesson then focuses on relational databases, which are the most commonly used type of database for data analytics. The lesson explains the basic structure of a relational database, which consists of tables, rows, and columns. The lesson also introduces SQL, the language used to query relational databases. Finally, the lesson provides a real-world example of how databases are used to store and manage data. 
 
-Next, we will learn how to upload and retrieve data in a database, using the SQL language.
+Video lesson - [Module 2.1 - What is Database?](https://youtu.be/Chusfir1KDIQ)
 
+Module 2.2 Connecting to Databases
+-------------
+
+The second lesson of the module focuses on connecting to databases and executing SQL queries. The lesson emphasizes that the ability to connect to and query databases is a crucial skill for data analysts and BI engineers, regardless of the specific database architecture or type. The lesson provides a hands-on demonstration of how to connect to a PostgreSQL database using the DBeaver SQL client and also explores the use of Docker containers for database setup and management. The lesson also covers essential SQL operations, including DDL (Data Definition Language), DML (Data Manipulation Language), and DQL (Data Query Language), and provides examples of common SQL queries and joins. The lesson concludes by recommending several resources for further learning and practice in SQL, highlighting the importance of hands-on experience in mastering this essential skill for data professionals. 
+
+Video lesson - [Module 2.2 - Connecting to Databases](https://youtu.be/cxgW0rLn8lU)
