Added links to git and description to 2.3,2.4

--- a/_posts/2023-06-04-Module00.md
+++ b/_posts/2023-06-04-Module00.md
@@ -54,6 +54,7 @@ In this video, I will cover:
 The goal of this lesson is to give you an overview of the CLI and help set up the environment. This will enable you to use the CLI throughout the course and encourage further practice 🌟.
 
 Video Lesson - [Just Enough CLI](https://youtu.be/49H7ZCZUbnQ?si=vgBDnjk_zzPZyd_J)
+GitHub Repository - [Just Enough CLI](https://github.com/surfalytics/analytics-course/tree/main/00_prerequisites/01_just_enough_cli)
 
 Module 0.4: Just Enough GitHub
 -------------
@@ -72,6 +73,7 @@ In this video, I will cover:
 The aim is to get you started on using GitHub for everything, as you learn and complete exercises for Surfalytics 🏄‍♂️.
 
 Video Lesson - [Just Enough GitHub](https://youtu.be/shco0WL69hU?si=WVypJbt_-We2-r-r)
+GitHub Repository - [Just Enough Github](https://github.com/surfalytics/analytics-course/tree/main/00_prerequisites/02_just_enough_git)
 
 Module 0.5: Just Enough Docker
 -------------
@@ -97,4 +99,5 @@ Here's what you'll learn:
 
 This video marks the conclusion of Module 0 of Surfalytics course prerequisites. Just practice CLI, Docker, GitHub, and your IDE skills, and your career will surely benefit from it. 
 
-Video Lesson: [Just Enough Docker](https://youtu.be/MCY9Jw_Sa4g?si=oA7a7E02aItgGziM)
+Video Lesson - [Just Enough Docker](https://youtu.be/MCY9Jw_Sa4g?si=oA7a7E02aItgGziM)
+GitHub Repository - [Just Enough Docker](https://github.com/surfalytics/analytics-course/tree/main/00_prerequisites/03_just_enough_docker)
