--- a/_posts/2023-06-04-Module01.md
+++ b/_posts/2023-06-04-Module01.md
@@ -89,6 +89,7 @@ Module 1.10 - Common File Types
 The lesson provides a comprehensive overview of various file types commonly encountered in the field of data analytics and engineering. Dmitry explains the purpose and characteristics of different file formats, including markdown files (.md), comma-separated values files (.csv), tab-separated values files (.tsv), text files (.txt), JavaScript Object Notation files (.json), Extensible Markup Language files (.xml), Parquet files (.parquet), Avro files (.avro), and Optimization Record Columnar files (.orc). The lesson also covers log files, configuration files (YAML), dot files (.env, .gitignore), Python environment files (Pipfile, poetry.toml, requirements.txt), and code files (Python, shell scripts, SQL, DBT models). Dmitry emphasizes the importance of understanding these file types for effective data handling and analysis, and provides practical examples and insights into their usage in real-world scenarios. The lesson concludes with a demonstration of using Git commands to add and commit changes to a repository, highlighting the importance of version control in data projects. 
 
 Video lesson - [Module 1.10 - Common File Types](https://youtu.be/aSnbEpAbGvU)
+GitHub Repository - [Common File Types](https://github.com/surfalytics/analytics-course/tree/main/01_what_is_analytics/09_file_types)
 
 Module 1.11 - Spreadsheet Analytics
 -------------
@@ -96,3 +97,4 @@ Module 1.11 - Spreadsheet Analytics
 The lesson includes a practical introduction to data analysis using spreadsheets. Dmitry guides viewers through the process of building an interactive dashboard in Excel, using a real-world dataset from Tableau's Superstore. The lesson emphasizes the importance of understanding data structures, formulating business questions, and utilizing spreadsheet functions to extract meaningful insights. It also highlights the limitations of spreadsheets and the benefits of transitioning to dedicated BI tools for more advanced analytics. The lesson concludes with a discussion of career paths in data analytics and the value of automation and migration projects in showcasing skills to potential employers. 
 
 Video lesson - [Module 1.11 - Spreadsheet Analytics](https://youtu.be/mhDmaLfgZJg)
+GitHub Repositiry - [Spreadsheets Analytics](https://github.com/surfalytics/analytics-course/tree/main/01_what_is_analytics/10_spreadsheet_dashboard)
