--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -29,3 +29,16 @@ Module 2.2 Connecting to Databases
 The second lesson of the module focuses on connecting to databases and executing SQL queries. The lesson emphasizes that the ability to connect to and query databases is a crucial skill for data analysts and BI engineers, regardless of the specific database architecture or type. The lesson provides a hands-on demonstration of how to connect to a PostgreSQL database using the DBeaver SQL client and also explores the use of Docker containers for database setup and management. The lesson also covers essential SQL operations, including DDL (Data Definition Language), DML (Data Manipulation Language), and DQL (Data Query Language), and provides examples of common SQL queries and joins. The lesson concludes by recommending several resources for further learning and practice in SQL, highlighting the importance of hands-on experience in mastering this essential skill for data professionals. 
 
 Video lesson - [Module 2.2 - Connecting to Databases](https://youtu.be/cxgW0rLn8lU)
+GitHub Repository - [Connecting to Databases](https://github.com/surfalytics/analytics-course/tree/main/02_getting_started_with_databases/02_connecting_databases)
+
+Module 2.3 Data Models in Databases
+-------------
+Lesson 2.3 focuses on data modeling and databases. The lesson explains the importance of data models as maps of the data in databases. It then goes over how to transform business processes into data models, using the example of a relational data model in a star schema. The lesson also introduces different data modeling techniques, including dimensional modeling, third normal form, and data vault modeling. It also touches on the wide table technique. The lesson then compares and contrasts different data modeling techniques, including star vs snowflake schema and normalized vs denormalized data. It also explains the concept of a data mart and its role in data warehousing. Finally, the lesson provides an overview of the design sequence in a data warehouse, from conceptual to physical models, and concludes with a discussion of various data modeling tools.
+
+Video lesson - [Module 2.3 - Data Models in Databases](https://youtu.be/WW3FMSFtoAA)
+
+Module 2.4 Databases in a Cloud
+-------------
+This lesson of the course focuses on cloud databases and how to use them. In the lesson Dmitry emphasizes the importance of SQL skills for data professionals and the need to understand databases. He then moves on to the cloud, explaining why it is important and how it is used by most companies today. The lesson also provides a brief overview of cloud providers such as AWS, Azure, and GCP, and the different types of databases they offer. It then dives into the specifics of creating a cloud database on AWS and Azure, including how to set up a free trial account, navigate the console, and create a database instance. The lesson also includes a homework assignment for students to create their own cloud database and connect it to DBeaver, which will be used in the next lesson for data visualization.
+
+Video lesson - [Module 2.4 - Databases in a Cloud](https://youtu.be/u9Xll2a43xc)
