Update module2, add 2.5-2.7

--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -42,3 +42,43 @@ Module 2.4 Databases in a Cloud
 This lesson of the course focuses on cloud databases and how to use them. In the lesson Dmitry emphasizes the importance of SQL skills for data professionals and the need to understand databases. He then moves on to the cloud, explaining why it is important and how it is used by most companies today. The lesson also provides a brief overview of cloud providers such as AWS, Azure, and GCP, and the different types of databases they offer. It then dives into the specifics of creating a cloud database on AWS and Azure, including how to set up a free trial account, navigate the console, and create a database instance. The lesson also includes a homework assignment for students to create their own cloud database and connect it to DBeaver, which will be used in the next lesson for data visualization.
 
 Video lesson - [Module 2.4 - Databases in a Cloud](https://youtu.be/u9Xll2a43xc)
+
+Module 2.5 Visualisation elements for Databases
+-------------
+This is a data engineering lesson that will teach you how to visualize data from databases. You will learn about different BI tools and how to use them to connect to your data and create dashboards. You will also learn about the importance of using the right metrics and how to define active users. Finally, you will get a chance to practice your SQL skills and learn how to use a NoSQL database.
+
+Video lesson - [Module 2.5 Visualisation elements for Databases](https://youtu.be/8zH2iaRHogM)
+
+Resources mentioned in the video:
+ • https://app.diagrams.net/
+ • https://mode.com/
+ • https://www.metabase.com/
+ • https://redash.io/
+ • https://aws.amazon.com/ru/pm/quicksight/#Learn_More_About_Amazon_QuickSight
+ • https://sql-ex.ru/
+
+Module 2.6 NoSQL Databases for Data Analyst and Data Engineer
+-------------
+This lesson is about NoSQL databases and their use cases for data analysts and data engineers.  The lesson will cover topics such as the different types of NoSQL databases, the benefits of using a NoSQL database, and how to use a NoSQL database for real-world applications.  The lesson will also discuss the importance of understanding the business context when working with data and the different ways to extract data from a NoSQL database.  Finally, the lesson will provide a brief overview of MongoDB, a popular NoSQL database.    
+
+Video lesson - [Module 2.6 NoSQL Databases for Data Analyst and Data Engineer](https://youtu.be/bzTfn7WI5h8)
+
+ • Link to repo: https://github.com/surfalytics/analytics-course/blob/main/02_getting_started_with_databases/06_nosql_databases/mongodb/readme.md
+ • Install MongoDB Community Edition: https://www.mongodb.com/docs/manual/administration/install-community/
+ • MongoDB Atlas CLI Installation: https://www.mongodb.com/docs/atlas/cli/current/install-atlas-cli/
+ • MongoDB Compass Download: https://www.mongodb.com/try/download/compass
+ • GUI Client Options: MongoDB Compass, Robo 3T: https://robomongo.org/
+ • Fivetran Connector to MongoDB: https://www.fivetran.com/connectors/mongodb
+ • Matillion ETL Connector to MongoDB: https://docs.matillion.com/metl/docs/2391882/
+
+Module 2.7 Just enough DuckDB for Data Analyst
+-------------
+This lesson is about DuckDB, an open-source database that is simple, portable, fast, extensible, and free.  The lesson will cover topics such as how to install DuckDB, how to use DuckDB to query data from different sources, and how to use DuckDB for different use cases.  The lesson will also discuss the benefits of using DuckDB over other databases, such as its ability to work with larger files than you have operation memory.  Finally, the lesson will provide a brief overview of some of the technical advantages of DuckDB, such as its columnar storage and vectorized query execution. 
+
+Video lesson - [Module 2.7 Just enough DuckDB for Data Analyst](https://youtu.be/Wo82r-YLN-U)
+
+Resources used:
+ • https://github.com/surfalytics/analytics-course/tree/5b6c52f0ba66d63eb46dd508543e88e5f7b2c9df/02_getting_started_with_databases/07_duckdb
+ • https://duckdb.org/
+ • https://aws.amazon.com/compare/the-difference-between-olap-and-oltp/
+
