--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -1,7 +1,7 @@
 ---
-title: Module 02 - Gettign started with databases and SQL
+title: Module 02 - Getting started with databases and SQL
 author: Dmitry Anoshin 
-date: 2023-09-12
+date: 2023-06-04
 category: surfalytics
 layout: post
 cover: \assets\surf2.svg
