Add module 3.0-.1, module 2 - ready

--- a/_posts/2023-06-04-Module03.md
+++ b/_posts/2023-06-04-Module03.md
@@ -9,8 +9,24 @@ cover: \assets\surf2.svg
 
 In the 3rd module of our course, you will learn about Business Intelligence systems. We will look at real-life examples, popular BI tools - Tableau, Power BI, and others. We will learn to create reports and discuss best practices for data visualization and its application for the benefit of business.
 
-Module 3.1 Introduction
+Module 3.0 Introduction
 -------------
+This lesson is an introduction to module 3.  In module 3, you will learn about business intelligence and business intelligence tools.  You will also learn about the different BI tools on the market, including Tableau, Power BI, and Looker.  Finally, you will learn how to use these tools to build dashboards and visualizations.
 
+Video lesson - [Module 3.0 Introduction](https://youtu.be/Ssa-78-6j7M)
 
+Module 3.1 What is Business Intelligence?
+-------------
+This lesson is about business intelligence (BI), BI tools, and data visualization. The goal of BI is to help non-technical users work with data to make decisions. There are many different BI tools available on the market, and they can be classified in several ways:
+
+* Open source vs. commercial: Commercial tools are easy to use but require a license, while open source tools are free but require more technical expertise. 
+* Enterprise-grade vs. self-service: Enterprise-grade tools are more powerful but also more complex, while self-service tools are easier to use but may not be as scalable. 
+* Deployment model: Some BI tools are deployed on-premises, while others are cloud-based.
+
+BI can provide a number of benefits, including automation, better decision-making, proactive actions, and improved quality of business solutions. It is important to select the right BI tool for the job, and to focus on the value that the tool can provide. 
+
+The lesson also includes a discussion of the BI process, and how it can be used to answer key business questions. 
+
+Video lesson - [Module 3.1 What is Business Intelligence?](https://youtu.be/AAe-DJNbZ5Y)
+Link to repo: https://github.com/surfalytics/data-projects/tree/main/async-projects/02-BI-admin-with-Tableau
 
