Inserted a line break

--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -50,11 +50,11 @@ This is a data engineering lesson that will teach you how to visualize data from
 Video lesson - [Module 2.5 Visualisation elements for Databases](https://youtu.be/8zH2iaRHogM)
 
 Resources mentioned in the video:
- • https://app.diagrams.net/
- • https://mode.com/
- • https://www.metabase.com/
- • https://redash.io/
- • https://aws.amazon.com/ru/pm/quicksight/#Learn_More_About_Amazon_QuickSight
+ • https://app.diagrams.net/ <br>
+ • https://mode.com/ <br>
+ • https://www.metabase.com/ <br>
+ • https://redash.io/ <br>
+ • https://aws.amazon.com/ru/pm/quicksight/#Learn_More_About_Amazon_QuickSight <br>
  • https://sql-ex.ru/
 
 Module 2.6 NoSQL Databases for Data Analyst and Data Engineer
@@ -62,14 +62,13 @@ Module 2.6 NoSQL Databases for Data Analyst and Data Engineer
 This lesson is about NoSQL databases and their use cases for data analysts and data engineers.  The lesson will cover topics such as the different types of NoSQL databases, the benefits of using a NoSQL database, and how to use a NoSQL database for real-world applications.  The lesson will also discuss the importance of understanding the business context when working with data and the different ways to extract data from a NoSQL database.  Finally, the lesson will provide a brief overview of MongoDB, a popular NoSQL database.    
 
 Video lesson - [Module 2.6 NoSQL Databases for Data Analyst and Data Engineer](https://youtu.be/bzTfn7WI5h8)
-
- • Link to repo: https://github.com/surfalytics/analytics-course/blob/main/02_getting_started_with_databases/06_nosql_databases/mongodb/readme.md
- • Install MongoDB Community Edition: https://www.mongodb.com/docs/manual/administration/install-community/
- • MongoDB Atlas CLI Installation: https://www.mongodb.com/docs/atlas/cli/current/install-atlas-cli/
- • MongoDB Compass Download: https://www.mongodb.com/try/download/compass
- • GUI Client Options: MongoDB Compass, Robo 3T: https://robomongo.org/
- • Fivetran Connector to MongoDB: https://www.fivetran.com/connectors/mongodb
- • Matillion ETL Connector to MongoDB: https://docs.matillion.com/metl/docs/2391882/
+• Link to repo: https://github.com/surfalytics/analytics-course/blob/main/02_getting_started_with_databases/06_nosql_databases/mongodb/readme.md <br>
+• Install MongoDB Community Edition: https://www.mongodb.com/docs/manual/administration/install-community/ <br>
+• MongoDB Atlas CLI Installation: https://www.mongodb.com/docs/atlas/cli/current/install-atlas-cli/ <br>
+• MongoDB Compass Download: https://www.mongodb.com/try/download/compass <br>
+• GUI Client Options: MongoDB Compass, Robo 3T: https://robomongo.org/ <br>
+• Fivetran Connector to MongoDB: https://www.fivetran.com/connectors/mongodb <br>
+• Matillion ETL Connector to MongoDB: https://docs.matillion.com/metl/docs/2391882/
 
 Module 2.7 Just enough DuckDB for Data Analyst
 -------------
@@ -78,7 +77,7 @@ This lesson is about DuckDB, an open-source database that is simple, portable, f
 Video lesson - [Module 2.7 Just enough DuckDB for Data Analyst](https://youtu.be/Wo82r-YLN-U)
 
 Resources used:
- • https://github.com/surfalytics/analytics-course/tree/5b6c52f0ba66d63eb46dd508543e88e5f7b2c9df/02_getting_started_with_databases/07_duckdb
- • https://duckdb.org/
+ • https://github.com/surfalytics/analytics-course/tree/5b6c52f0ba66d63eb46dd508543e88e5f7b2c9df/02_getting_started_with_databases/07_duckdb <br>
+ • https://duckdb.org/ <br>
  • https://aws.amazon.com/compare/the-difference-between-olap-and-oltp/
 
