added line brakers, descriptions modules 3.2-4

--- a/_posts/2023-06-04-Module02.md
+++ b/_posts/2023-06-04-Module02.md
@@ -28,7 +28,7 @@ Module 2.2 Connecting to Databases
 
 The second lesson of the module focuses on connecting to databases and executing SQL queries. The lesson emphasizes that the ability to connect to and query databases is a crucial skill for data analysts and BI engineers, regardless of the specific database architecture or type. The lesson provides a hands-on demonstration of how to connect to a PostgreSQL database using the DBeaver SQL client and also explores the use of Docker containers for database setup and management. The lesson also covers essential SQL operations, including DDL (Data Definition Language), DML (Data Manipulation Language), and DQL (Data Query Language), and provides examples of common SQL queries and joins. The lesson concludes by recommending several resources for further learning and practice in SQL, highlighting the importance of hands-on experience in mastering this essential skill for data professionals. 
 
-Video lesson - [Module 2.2 - Connecting to Databases](https://youtu.be/cxgW0rLn8lU)
+Video lesson - [Module 2.2 - Connecting to Databases](https://youtu.be/cxgW0rLn8lU) <br>
 GitHub Repository - [Connecting to Databases](https://github.com/surfalytics/analytics-course/tree/main/02_getting_started_with_databases/02_connecting_databases)
 
 Module 2.3 Data Models in Databases
