--- a/_posts/2023-06-04-Module03.md
+++ b/_posts/2023-06-04-Module03.md
@@ -27,6 +27,23 @@ BI can provide a number of benefits, including automation, better decision-makin
 
 The lesson also includes a discussion of the BI process, and how it can be used to answer key business questions. 
 
-Video lesson - [Module 3.1 What is Business Intelligence?](https://youtu.be/AAe-DJNbZ5Y)
+Video lesson - [Module 3.1 What is Business Intelligence?](https://youtu.be/AAe-DJNbZ5Y) <br>
 Link to repo: https://github.com/surfalytics/data-projects/tree/main/async-projects/02-BI-admin-with-Tableau
 
+Moduel 3.2 Business intelligence market
+-------------
+This lesson explores the business intelligence (BI) market, examining different BI tools and their applications. The lesson also provides an overview of the Gartner Quadrant and Forrester, which are reports that evaluate and rank BI vendors.  Additionally, the lesson discusses the value of BI certifications and their role in career development.
+
+Video lesson - [Moduel 3.2 Business intelligence market] (https://youtu.be/S1ySiti33NA)
+
+Moduel 3.3 Two types of business intelligence
+-------------
+This video lesson is about two types of business intelligence: Enterprise BI and Self-Service BI.  The lesson discusses what each type is and the key differences between them.  It also covers some of the history of BI, including the rise of Tableau and the shift from Enterprise BI to Self-Service BI.  The lesson also touches on some of the challenges associated with each type of BI. 
+
+Video lesson - [Module 3.3 Two types of business intelligence](https://youtu.be/5sTSF8zSE_c)
+
+Moduel 3.4 MOLAP vs ROLAP
+-------------
+This video lesson is about the difference between MOLAP and ROLAP. The lesson discusses what each type is and the pros and cons of each. It also covers some of the history of OLAP, including the rise of Microsoft Analysis Services. The lesson also touches on some of the challenges associated with each type of OLAP. 
+
+Video lesson - [Module 3.3 MOLAP vs ROLAP](https://youtu.be/gRXO1S8TQfI)
