--- a/_posts/2023-06-04-Module01.md
+++ b/_posts/2023-06-04-Module01.md
@@ -23,8 +23,8 @@ Module 1.1 Evolution of Analytics
 
 The 3 videos series on the history of analytics and data engineering provides a captivating journey through the evolution of the field over the past 30 years. Dmitry Anoshin shares his personal insights and experiences, tracing the development of key concepts, technologies, and roles that have shaped the industry. The series delves into the origins of data warehousing, business intelligence, and big data, highlighting the pioneers and their groundbreaking contributions. It also explores the impact of cloud computing, the rise of open-source tools, and the emergence of new paradigms like lake houses and data observability. The lessons offer a unique blend of historical context, technical explanations, and practical advice, making it a valuable resource for anyone seeking to understand the foundations of analytics and data engineering.
 
-Video lesson - [Module 1.1 - Part 1](https://youtu.be/UYpK8ruLMQo)
-Video lesson - [Module 1.1 - Part 2](https://youtu.be/7kDJ6SSn97I)
+Video lesson - [Module 1.1 - Part 1](https://youtu.be/UYpK8ruLMQo)<br>
+Video lesson - [Module 1.1 - Part 2](https://youtu.be/7kDJ6SSn97I)<br>
 Video lesson - [Module 1.1 - Part 3](https://youtu.be/WtBlX00MlHY)
 
 Module 1.2 The Role of Analytics in an Organization
